--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -50,6 +50,60 @@
     background-color: rgb(92, 190, 255);
     outline: none;
   }
+
+  .green-button {
+    width: 45%;
+    border: none;
+    color: rgb(255, 255, 255);
+    border-radius: 5px;
+    cursor: pointer;
+    background-color: rgb(13, 173, 93);
+    padding: 5px;
+    margin-top: 4px;
+    font-weight: 500;
+    font-size: 16px;
+  }
+  
+  .green-button:focus {
+    background-color: rgb(44, 177, 3);
+    outline: none;
+  }
+
+  .blue-button {
+    width: 45%;
+    border: none;
+    color: rgb(255, 255, 255);
+    border-radius: 5px;
+    cursor: pointer;
+    background-color: rgb(72, 84, 245);
+    padding: 5px;
+    margin-top: 4px;
+    font-weight: 500;
+    font-size: 16px;
+  }
+  
+  .blue-button:focus {
+    background-color: rgb(6, 74, 221);
+    outline: none;
+  }
+
+  .order-title {
+    font-size: 16px;
+  }
+
+  .order-desc {
+    font-size: 14px;
+  }
+  .order-start {
+    font-size: 12px;
+  }
+
+  .order-virtual {
+    font-size: 11px;
+  }
+  .order-karma {
+    font-size: 11px;
+  }
   
   .submit-button-container {
     margin-top: 18px;
@@ -67,13 +121,23 @@
     align-items: center;
     height: 90vh;
     width: 100vw;
+    margin-top: 6vh;
+  }
+
+  .application-form-page-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    height: 90vh;
+    width: 200vw;
     margin-top: 10vh;
   }
   
   .container {
     border: 1px solid rgb(219, 219, 219);
-    padding: 10px 0;
-    margin-bottom: 10px;
+    padding: 20px;
+    margin-bottom: 15px;
     background-color: rgb(255, 255, 255);
     display: flex;
     flex-direction: column;
@@ -158,7 +222,7 @@
   }
   
   .posts {
-    width: 630px;
+    width: 800px;
   }
   
   .post-user-info {
@@ -397,7 +461,42 @@ input:focus {
 }
 
 .toggle-bar {
-  padding-bottom: 15px;
+  margin-top: 100px;
+  margin-left: 36%;
+  width: 28%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  /* background-color: rgb(5, 124, 59); */
+}
+
+
+.toggle-button {
+  width: 100px;
+  border: none;
+  color: rgb(70, 118, 252);
+  border-radius: 1px;
+  /* border: 1px; */
+  /* border-color:  rgb(13, 173, 93); */
+  cursor: pointer;
+  padding: 5px;
+  margin-top: 4px;
+  font-weight: 500;
+  font-size: 16px;
+}
+
+.logout-button {
+  width: 100px;
+  border: none;
+  color: rgb(70, 118, 252);
+  border-radius: 1px;
+  /* border: 1px; */
+  /* border-color:  rgb(13, 173, 93); */
+  cursor: pointer;
+  padding: 5px;
+  margin-top: 4px;
+  font-weight: 500;
+  font-size: 14px;
 }
 
 /* .order-form-container {
