--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -112,6 +112,17 @@
     padding: 2px;
     color:rgb(107, 107, 107)
   }
+
+  .app-username {
+    font-size: 20px;
+    padding: 4px;
+  }
+
+  .app-status {
+    font-size: 18px;
+    font-weight: bold;
+    padding: 2px;
+  }
   
   .submit-button-container {
     margin-top: 18px;
@@ -230,7 +241,11 @@
   }
   
   .posts {
-    width: 800px;
+    width: 750px;
+  }
+
+  .apps {
+    width: 600px;
   }
   
   .post-user-info {
