--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -211,6 +211,16 @@
     margin-top: 30px;
   }
 
+  .profile-page-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    height: 20%;
+    width: 100%;
+    margin-top: 75px;
+  }
+
   .form-container {
       display: flex;
       flex-direction: column;
@@ -259,6 +269,34 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+
+  .header-container {
+    border: 1px solid rgb(219, 219, 219);
+    padding: 12px;
+    margin-bottom: 15px;
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    width: 90%;
+  }
+
+  .user-profile-body {
+    border: 1px solid rgb(219, 219, 219);
+    padding: 12px;
+    margin-bottom: 15px;
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 90%
+  }
+
+  .user-profile-name, .user-profile-score, .user-profile-karma {
+    width: 30%;
+    font-weight: 700;
   }
 
   .order-profile, .app-profile, .rev-profile {
