--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -127,6 +127,7 @@
     /* margin-left: 5px; */
     /* border: .5px solid rgb(94, 92, 92); */
     margin: 2px;
+    margin-left: 0px;
     padding: 10px;
   }
 
@@ -202,6 +203,7 @@
   }
   
   .page-container {
+    /* position: fixed; */
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -252,6 +254,16 @@
   }
 
   .order-form-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    height: 90vh;
+    width: 200vw;
+    margin-top: 2vh;
+  }
+
+  .review-form-container {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -395,6 +407,24 @@
     width: 725px;
   }
 
+  .notifs-container {
+    margin-top: 100px;
+    margin-left: 25%;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .notif {
+    padding: 10px;
+    margin: 15px;
+    background-color: white;
+  }
+
+  .notif:hover {
+    background-color: rgb(248, 226, 229);
+  }
+
   .apps {
     padding-top: 8px;
     width: 550px;
@@ -443,6 +473,10 @@
   }
   
   .icons-container:hover {
+    cursor: pointer;
+  }
+
+  .demo-link:hover {
     cursor: pointer;
   }
   
@@ -636,7 +670,10 @@ input:focus {
 }
 
 .toggle-bar {
+  position: fixed;
+  top: 0;
   margin-top: 70px;
+  /* margin-bottom: 20px; */
   margin-left: 33%;
   width: 34%;
   display: flex;
@@ -658,6 +695,14 @@ input:focus {
   margin-top: 4px;
   font-weight: 500;
   font-size: 16px;
+}
+
+.homepage-feed {
+  overflow-y: auto;
+}
+
+.homepage-feed::-webkit-scrollbar {
+  display: none;
 }
 
 .logout-button {
