--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -590,18 +590,37 @@ nav {
   box-sizing: border-box;
   top: 0;
   position: fixed;
-  border-bottom: 1px solid rgb(219, 219, 219) ;
+  border-bottom: 1px solid rgb(219, 219, 219);
   z-index: 100;
 }
 
 .menu {
   display: flex;
-  width: 100vw;
+  flex-direction: row;
+  width: 100%;
   height: 54px;
   line-height: 18px;
   align-items: center;
   justify-content: space-between;
   padding: 0 10vw;
+}
+
+.left-menu {
+  width: 50%;
+  margin-left: 0px;
+}
+
+.right-menu {
+  width: 50%;
+  margin-left: 50%;
+  display: flex;
+  flex-direction: row;
+}
+
+.menu-item {
+  /* max-width: 55%; */
+  margin-left: 30px;
+  color: rgb(14,164,227);
 }
 
 .user-buttons {
@@ -644,23 +663,23 @@ input:focus {
   align-items: center;
   padding: 0;
   cursor: pointer;
-  border: 1px solid lightgray;
-  border-radius: 50%;
-  overflow: hidden;
+  /* border: 1px solid lightgray; */
+  /* border-radius: 50%; */
+  /* overflow: hidden; */
   position: relative;
-  width: 30px;
-  height: 30px;
+  /* width: 30px;
+  height: 30px; */
 }
 
 #dropdown-menu-button img {
   object-fit: cover;
-  border-radius: 50%;
+  /* border-radius: 50%; */
   width: 30px;
   height: 30px;
 }
 
 #dropdown-menu-button:hover {
-  box-shadow: 0 0 3px 1px rgb(0, 0, 0, 0.2);
+  /* box-shadow: 0 0 3px 1px rgb(0, 0, 0, 0.2); */
   outline: none;
 }
 
@@ -669,8 +688,8 @@ input:focus {
   box-sizing: border-box;
   padding: .1rem 0;
   list-style-type: none;
-  box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 3px;
+  /* box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.2); */
+  /* border-radius: 3px; */
 }
 
 .popout * {
