--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -198,6 +198,20 @@ img:active {
   color:rgb(107, 107, 107)
 }
 
+.order-karma-black {
+  font-size: 18px;
+  font-weight: 600;
+  padding: 5px;
+  color: black;
+}
+
+.order-karma-black-lg {
+  font-size: 20px;
+  font-weight: 600;
+  padding: 5px;
+  color: black;
+}
+
 .order-status, .app-status {
   font-size: 18px;
   padding: 5px;
